# strypes-assessment

./: README-project.md  README.md  all_data.yaml  pyproject.toml  users
warehouse/: urls.py
warehouse/apps/core/: admin.py  local.py  middleware.py
warehouse/apps/core/fixtures/: groups.yaml  users.yaml
warehouse/apps/core/migrations/: 0001_activity_log.py  0002_remove_activitylog_action_time_and_more.py
warehouse/apps/core/models/: activity_log.py  staff_invetory.py
warehouse/apps/core/serializers/: activity_log.py
warehouse/apps/core/views/: __init__.py  activity_log.py  django_rest_framework.py
warehouse/apps/employees/: admin.py
warehouse/apps/employees/migrations/: 0001_employee.py
warehouse/apps/employees/models/: __init__.py  employees.py
warehouse/apps/inventory/: admin.py  apps.py  signals.py  views.py
warehouse/apps/inventory/exceptions/: api.py  model.py
warehouse/apps/inventory/migrations/: 0001_inventory_class_and_item.py  0002_items_storage_space_relation.py  0003_alter_item_inventory_class.py  0004_alter_item_quantity.py  0005_alter_item_quantity_alter_item_size.py
warehouse/apps/inventory/models/: inventory.py
warehouse/apps/inventory/serializers/: inventory_class.py  item.py
warehouse/apps/storage_spaces/: admin.py  apps.py  views.py
warehouse/apps/storage_spaces/exceptions/: model.py
warehouse/apps/storage_spaces/migrations/: 0001_storage_space_and_type.py  (+3 more)
warehouse/database/: warehouse.db
warehouse/settings/: __init__.py  base.py  middleware.py  redoc.py  rest_framework.py  swagger.py
(+4 files in other folders)
